--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -237,7 +237,9 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/CadastroFuncionario.html"><i class="fas fa-user me-2"></i>Funcionário</a></li>
                             <li><a class="dropdown-item" href="register.html"><i class="fas fa-project-diagram me-2"></i>Projeto</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Atividade</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Tarefa
+
+</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-chart-line me-2"></i>Analisar uso futuro</a></li>
                         </ul>
@@ -250,7 +252,9 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/list.html"><i class="fas fa-users me-2"></i>Funcionários</a></li>
                             <li><a class="dropdown-item" href="/listarProjeto.html"><i class="fas fa-project-diagram me-2"></i>Projetos</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Atividades</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Tarefas
+
+</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-chart-pie me-2"></i>Analisar uso futuro</a></li>
                         </ul>
@@ -460,7 +464,20 @@
                             <button class="btn btn-link p-0 toggle-desc">Ver mais</button>
                             <div class="d-flex justify-content-between mt-3">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">
-                                    <i class="fas fa-tasks me-1"></i> Atividades
+                                    <i class="fas fa-tasks me-1"></i> 
+
+
+
+
+
+
+
+
+
+
+Tarefas
+
+
                                 </button>
                                 <button type="button" class="btn btn-sm btn-info" onclick="abrirProjeto(${projeto.id})">
                                     <i class="fas fa-eye me-1"></i> Detalhes
