--- a/src/main/resources/templates/task/register.html
+++ b/src/main/resources/templates/task/register.html
@@ -50,7 +50,20 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/CadastroFuncionario.html"><i class="fas fa-user me-2"></i>Funcionário</a></li>
                             <li><a class="dropdown-item" href="cadastroProjeto.html"><i class="fas fa-project-diagram me-2"></i>Projeto</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Atividade</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>
+
+
+
+
+
+
+
+
+
+
+Tarefa
+
+</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-chart-line me-2"></i>Analisar uso futuro</a></li>
                         </ul>
@@ -63,7 +76,20 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/list.html"><i class="fas fa-users me-2"></i>Funcionários</a></li>
                             <li><a class="dropdown-item" href="../project/list.html"><i class="fas fa-project-diagram me-2"></i>Projetos</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Atividades</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>
+
+
+
+
+
+
+
+
+
+
+Tarefa
+
+s</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-chart-pie me-2"></i>Analisar uso futuro</a></li>
                         </ul>
