--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -237,7 +237,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/CadastroFuncionario.html"><i class="fas fa-user me-2"></i>Funcionário</a></li>
                             <li><a class="dropdown-item" href="register.html"><i class="fas fa-project-diagram me-2"></i>Projeto</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Tarefa
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Equipe
 
 </a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -252,7 +252,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/list.html"><i class="fas fa-users me-2"></i>Funcionários</a></li>
                             <li><a class="dropdown-item" href="/listarProjeto.html"><i class="fas fa-project-diagram me-2"></i>Projetos</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Tarefas
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Equipes
 
 </a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -464,20 +464,7 @@
                             <button class="btn btn-link p-0 toggle-desc">Ver mais</button>
                             <div class="d-flex justify-content-between mt-3">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">
-                                    <i class="fas fa-tasks me-1"></i> 
-
-
-
-
-
-
-
-
-
-
-Tarefas
-
-
+                                    <i class="fas fa-tasks me-1"></i> Equipes
                                 </button>
                                 <button type="button" class="btn btn-sm btn-info" onclick="abrirProjeto(${projeto.id})">
                                     <i class="fas fa-eye me-1"></i> Detalhes
