--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -251,7 +251,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../employee/list.html"><i class="fas fa-users me-2"></i>Funcionários</a></li>
-                            <li><a class="dropdown-item" href="/listarProjeto.html"><i class="fas fa-project-diagram me-2"></i>Projetos</a></li>
+                            <li><a class="dropdown-item" href="/list.html"><i class="fas fa-project-diagram me-2"></i>Projetos</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-tasks me-2"></i>Equipes
 
 </a></li>
@@ -536,7 +536,7 @@
     }
 
     function abrirProjeto(id) {
-        window.location.href = `abrirProjeto.html?id=${id}`;
+        window.location.href = `open.html?id=${id}`;
     }
 
     // Funções auxiliares
