--- a/src/main/resources/templates/dashboard/dashboard.html
+++ b/src/main/resources/templates/dashboard/dashboard.html
@@ -49,6 +49,12 @@
         <div id="tasksByStatusChart" style="height: 300px;"></div>
     </div>
 
+    <div class="chart-container">
+        <h2>Tarefas Concluídas por Mês</h2>
+        <label for="selectYear">Selecione o Ano:</label>
+        <select id="selectYear"></select> <div id="completedTasksByMonthChart" style="height: 400px; margin-top: 20px;"></div>
+    </div>
+
 </div>
 
 <script src="dashboard.js"></script>
